--- a/pom.xml
+++ b/pom.xml
@@ -58,5 +58,11 @@
             <artifactId>pdfbox</artifactId>
             <version>2.0.27</version> <!-- 可以檢查最新版本 -->
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>RELEASE</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
